# huawei-push-kit-python

./: README.md  pyproject.toml
huawei_push_kit_python/: __init__.py
python37/src/push_admin/: __init__.py  _app.py  _http.py  _message_serializer.py  messaging.py
